# ferris-bot

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  README.md  ferris-bot.nomad
.github/workflows/: build-docker.yml
ferris-bot/: Cargo.toml  Dockerfile
ferris-bot/src/: controller.rs  main.rs
ferris-bot/src/commands/: run.rs
ferris-bot/src/model/: mod.rs
nomad/: README.md  ferris-bot.nomad  nomad-server.conf
runner-common/: Cargo.toml  README.md  build.rs
runner-common/proto/: controller.proto  runner.proto
runner-common/src/: lib.rs
runner-service/: Cargo.toml  README.md
runner-service/examples/: many-heartbeat.rs  many-hello-world.rs  register.rs
runner-service/src/: configuration.rs  main.rs  service.rs
runner-service/src/runner/: container.rs  mod.rs  runnable.rs
serenity-layer/: Cargo.toml
serenity-layer/src/: api.rs  commands.rs  lib.rs
src/: discord_handler.rs  main.rs  playground.rs
src/commands/: quiz.rs
