[package]
name = "ferris-bot"
version = "0.1.0"
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
edition = "2021"

[dependencies]
runner-common = { path = "../runner-common" }
serenity = { version="0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.15.0" }
poise = "0.2.1"
async-trait = "0.1.56"
futures = "0.3.24"