[package]
name = "runner-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runner-common = { path = "../runner-common" }
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.24"
async-trait = "0.1.56"
dotenv = { version = "0.15.0" }
process_control = "3.4"
base64 = "0.13.0"