[package]
name = "serenity-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
indexmap = "1.9.1"
reqwest = { version = "0.11.12", features = ["json"] }
serenity = "0.11.5"
tracing = "0.1.36"
