[package]
name = "serenity-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
indexmap = "1.9.1"
reqwest = { version = "0.11.12", features = ["json"] }
serenity = { version="0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tracing = "0.1.36"
